fix: build options
